# vbotssh

./: Cargo.toml  LICENSE  PKGBUILD  README.md  flake.nix
.github/workflows/: release.yml
assets/: config.example.toml
src/: app.rs  config.rs  model.rs  ui.rs
src/collector/: disks.rs  docker.rs  local.rs  mod.rs  net.rs  remote.rs
