[package]
name = "vtopssh"
version = "0.1.3"
edition = "2021"
license = "MIT"
description = "Terminal UI system monitor for Linux with remote host support over SSH"
repository = "https://github.com/vrubelroman/vtopssh"

[[bin]]
name = "vtopssh"
path = "src/main.rs"

[package.metadata.deb]
name = "vtopssh"
section = "utils"
priority = "optional"
depends = "$auto, openssh-client, iputils-ping, util-linux"
recommends = "docker.io | docker-ce-cli"
assets = [
    ["target/release/vtopssh", "usr/bin/vtopssh", "755"],
    ["README.md", "usr/share/doc/vtopssh/README.md", "644"],
    ["assets/config.example.toml", "usr/share/doc/vtopssh/config.example.toml", "644"],
    ["LICENSE", "usr/share/licenses/vtopssh/LICENSE", "644"],
]

[dependencies]
anyhow = "1.0"
crossterm = "0.27"
ratatui = "0.26"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.29"
toml = "0.8"
